fix: se agregra todo el proceso para cliente y entidades
